--- a/api.ipynb
+++ b/api.ipynb
@@ -494,41 +494,41 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Total</td>\n",
-       "      <td>822674</td>\n",
-       "      <td>516308</td>\n",
-       "      <td>22152</td>\n",
-       "      <td>283835</td>\n",
-       "      <td>11/07/2020 12:14:06</td>\n",
-       "      <td>379</td>\n",
+       "      <td>851261</td>\n",
+       "      <td>536544</td>\n",
+       "      <td>22699</td>\n",
+       "      <td>291636</td>\n",
+       "      <td>12/07/2020 14:24:06</td>\n",
+       "      <td>382</td>\n",
        "      <td>TT</td>\n",
-       "      <td>70</td>\n",
-       "      <td>67</td>\n",
-       "      <td>8</td>\n",
+       "      <td>902</td>\n",
+       "      <td>313</td>\n",
+       "      <td>12</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Maharashtra</td>\n",
-       "      <td>238461</td>\n",
-       "      <td>132625</td>\n",
-       "      <td>9893</td>\n",
-       "      <td>95647</td>\n",
-       "      <td>10/07/2020 22:28:08</td>\n",
-       "      <td>296</td>\n",
+       "      <td>246600</td>\n",
+       "      <td>136985</td>\n",
+       "      <td>10116</td>\n",
+       "      <td>99202</td>\n",
+       "      <td>12/07/2020 01:51:08</td>\n",
+       "      <td>297</td>\n",
        "      <td>MH</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>296 cases were marked as non-covid deaths in M...</td>\n",
+       "      <td>297 cases were marked as non-covid deaths in M...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Tamil Nadu</td>\n",
-       "      <td>130261</td>\n",
-       "      <td>82324</td>\n",
-       "      <td>1829</td>\n",
-       "      <td>46108</td>\n",
-       "      <td>10/07/2020 19:56:10</td>\n",
+       "      <td>134226</td>\n",
+       "      <td>85915</td>\n",
+       "      <td>1898</td>\n",
+       "      <td>46413</td>\n",
+       "      <td>11/07/2020 19:07:07</td>\n",
        "      <td>0</td>\n",
        "      <td>TN</td>\n",
        "      <td>0</td>\n",
@@ -539,11 +539,11 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Delhi</td>\n",
-       "      <td>109140</td>\n",
-       "      <td>84694</td>\n",
-       "      <td>3300</td>\n",
-       "      <td>21146</td>\n",
-       "      <td>10/07/2020 20:40:13</td>\n",
+       "      <td>110921</td>\n",
+       "      <td>87692</td>\n",
+       "      <td>3334</td>\n",
+       "      <td>19895</td>\n",
+       "      <td>11/07/2020 19:50:08</td>\n",
        "      <td>0</td>\n",
        "      <td>DL</td>\n",
        "      <td>0</td>\n",
@@ -554,11 +554,11 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Gujarat</td>\n",
-       "      <td>40155</td>\n",
-       "      <td>28183</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>9949</td>\n",
-       "      <td>10/07/2020 20:21:08</td>\n",
+       "      <td>41027</td>\n",
+       "      <td>28685</td>\n",
+       "      <td>2033</td>\n",
+       "      <td>10309</td>\n",
+       "      <td>11/07/2020 20:18:07</td>\n",
        "      <td>0</td>\n",
        "      <td>GJ</td>\n",
        "      <td>0</td>\n",
@@ -572,22 +572,22 @@
       ],
       "text/plain": [
        "         State  Confirmed  Recovered  Deaths  Active    Last_Updated_Time  \\\n",
-       "0        Total     822674     516308   22152  283835  11/07/2020 12:14:06   \n",
-       "1  Maharashtra     238461     132625    9893   95647  10/07/2020 22:28:08   \n",
-       "2   Tamil Nadu     130261      82324    1829   46108  10/07/2020 19:56:10   \n",
-       "3        Delhi     109140      84694    3300   21146  10/07/2020 20:40:13   \n",
-       "4      Gujarat      40155      28183    2023    9949  10/07/2020 20:21:08   \n",
+       "0        Total     851261     536544   22699  291636  12/07/2020 14:24:06   \n",
+       "1  Maharashtra     246600     136985   10116   99202  12/07/2020 01:51:08   \n",
+       "2   Tamil Nadu     134226      85915    1898   46413  11/07/2020 19:07:07   \n",
+       "3        Delhi     110921      87692    3334   19895  11/07/2020 19:50:08   \n",
+       "4      Gujarat      41027      28685    2033   10309  11/07/2020 20:18:07   \n",
        "\n",
        "   Migrated_Other State_code  Delta_Confirmed  Delta_Recovered  Delta_Deaths  \\\n",
-       "0             379         TT               70               67             8   \n",
-       "1             296         MH                0                0             0   \n",
+       "0             382         TT              902              313            12   \n",
+       "1             297         MH                0                0             0   \n",
        "2               0         TN                0                0             0   \n",
        "3               0         DL                0                0             0   \n",
        "4               0         GJ                0                0             0   \n",
        "\n",
        "                                         State_Notes  \n",
        "0                                                NaN  \n",
-       "1  296 cases were marked as non-covid deaths in M...  \n",
+       "1  297 cases were marked as non-covid deaths in M...  \n",
        "2  2 deaths cross notified to other states from C...  \n",
        "3  Delhi bulletins in the morning, containing dat...  \n",
        "4                                                NaN  "
@@ -822,13 +822,13 @@
        "      <td>State Unassigned</td>\n",
        "      <td>UN_Unassigned</td>\n",
        "      <td>Unassigned</td>\n",
-       "      <td>3387</td>\n",
-       "      <td>3387</td>\n",
+       "      <td>2995</td>\n",
+       "      <td>2995</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>-745</td>\n",
-       "      <td>-745</td>\n",
+       "      <td>-392</td>\n",
+       "      <td>-392</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -898,9 +898,9 @@
        "      <td>Andhra Pradesh</td>\n",
        "      <td>AP_Foreign Evacuees</td>\n",
        "      <td>Foreign Evacuees</td>\n",
-       "      <td>424</td>\n",
-       "      <td>126</td>\n",
-       "      <td>298</td>\n",
+       "      <td>428</td>\n",
+       "      <td>129</td>\n",
+       "      <td>299</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -923,14 +923,14 @@
        "4     0         AP               Andhra Pradesh          AP_Foreign Evacuees   \n",
        "\n",
        "                   District  Confirmed  Active  Recovered  Deceased  \\\n",
-       "0                Unassigned       3387    3387          0         0   \n",
+       "0                Unassigned       2995    2995          0         0   \n",
        "1                  Nicobars          0       0          0         0   \n",
        "2  North and Middle Andaman          1       0          1         0   \n",
        "3             South Andaman         51      19         32         0   \n",
-       "4          Foreign Evacuees        424     126        298         0   \n",
+       "4          Foreign Evacuees        428     129        299         0   \n",
        "\n",
        "   Migrated_Other  Delta_Confirmed  Delta_Active  Delta_Recovered  \\\n",
-       "0               0             -745          -745                0   \n",
+       "0               0             -392          -392                0   \n",
        "1               0                0             0                0   \n",
        "2               0                0             0                0   \n",
        "3               0                0             0                0   \n",
@@ -1214,7 +1214,7 @@
        "      <th>Num Calls State Helpline</th>\n",
        "      <th>Source1</th>\n",
        "      <th>Source2</th>\n",
-       "      <th>Unnamed: 22</th>\n",
+       "      <th>Source3</th>\n",
        "      <th>Test positivity rate</th>\n",
        "      <th>Tests per thousand</th>\n",
        "      <th>Tests per million</th>\n",
@@ -1230,7 +1230,7 @@
        "      <td>1403.0</td>\n",
        "      <td>Samples Sent</td>\n",
        "      <td>12.0</td>\n",
-       "      <td>1210</td>\n",
+       "      <td>1210+</td>\n",
        "      <td>181.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1307,7 +1307,7 @@
        "2  27/04/2020  Andaman and Nicobar Islands        2848.0       Samples Sent   \n",
        "\n",
        "   Positive Negative  Unconfirmed  Cumulative People In Quarantine  \\\n",
-       "0      12.0     1210        181.0                              NaN   \n",
+       "0      12.0    1210+        181.0                              NaN   \n",
        "1      27.0      NaN        246.0                              NaN   \n",
        "2      33.0      NaN        106.0                              NaN   \n",
        "\n",
@@ -1321,10 +1321,10 @@
        "1                   NaN                     280.0   \n",
        "2                   NaN                     298.0   \n",
        "\n",
-       "                               Source1  Source2  Unnamed: 22  \\\n",
-       "0         https://t.me/indiacovid/2550      NaN          NaN   \n",
-       "1  https://t.me/indiacovid/3147?single      NaN          NaN   \n",
-       "2  https://t.me/indiacovid/3365?single      NaN          NaN   \n",
+       "                               Source1  Source2  Source3  \\\n",
+       "0         https://t.me/indiacovid/2550      NaN      NaN   \n",
+       "1  https://t.me/indiacovid/3147?single      NaN      NaN   \n",
+       "2  https://t.me/indiacovid/3365?single      NaN      NaN   \n",
        "\n",
        "   Test positivity rate  Tests per thousand  Tests per million  \\\n",
        "0                 0.86%                3.53             3534.0   \n",
