--- a/api.ipynb
+++ b/api.ipynb
@@ -494,26 +494,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Total</td>\n",
-       "      <td>851261</td>\n",
-       "      <td>536544</td>\n",
-       "      <td>22699</td>\n",
-       "      <td>291636</td>\n",
-       "      <td>12/07/2020 14:24:06</td>\n",
+       "      <td>888944</td>\n",
+       "      <td>560307</td>\n",
+       "      <td>23333</td>\n",
+       "      <td>304922</td>\n",
+       "      <td>13/07/2020 18:36:06</td>\n",
        "      <td>382</td>\n",
        "      <td>TT</td>\n",
-       "      <td>902</td>\n",
-       "      <td>313</td>\n",
-       "      <td>12</td>\n",
+       "      <td>9477</td>\n",
+       "      <td>5878</td>\n",
+       "      <td>146</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Maharashtra</td>\n",
-       "      <td>246600</td>\n",
-       "      <td>136985</td>\n",
-       "      <td>10116</td>\n",
-       "      <td>99202</td>\n",
-       "      <td>12/07/2020 01:51:08</td>\n",
+       "      <td>254427</td>\n",
+       "      <td>140325</td>\n",
+       "      <td>10289</td>\n",
+       "      <td>103516</td>\n",
+       "      <td>12/07/2020 19:07:08</td>\n",
        "      <td>297</td>\n",
        "      <td>MH</td>\n",
        "      <td>0</td>\n",
@@ -524,41 +524,41 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Tamil Nadu</td>\n",
-       "      <td>134226</td>\n",
-       "      <td>85915</td>\n",
-       "      <td>1898</td>\n",
-       "      <td>46413</td>\n",
-       "      <td>11/07/2020 19:07:07</td>\n",
+       "      <td>142798</td>\n",
+       "      <td>92567</td>\n",
+       "      <td>2032</td>\n",
+       "      <td>48199</td>\n",
+       "      <td>13/07/2020 18:28:09</td>\n",
        "      <td>0</td>\n",
        "      <td>TN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>4328</td>\n",
+       "      <td>3035</td>\n",
+       "      <td>66</td>\n",
        "      <td>2 deaths cross notified to other states from C...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Delhi</td>\n",
-       "      <td>110921</td>\n",
-       "      <td>87692</td>\n",
-       "      <td>3334</td>\n",
-       "      <td>19895</td>\n",
-       "      <td>11/07/2020 19:50:08</td>\n",
+       "      <td>112494</td>\n",
+       "      <td>89968</td>\n",
+       "      <td>3371</td>\n",
+       "      <td>19155</td>\n",
+       "      <td>12/07/2020 18:22:07</td>\n",
        "      <td>0</td>\n",
        "      <td>DL</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Delhi bulletins in the morning, containing dat...</td>\n",
+       "      <td>Delhi bulletins contain the counts for the pre...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Gujarat</td>\n",
-       "      <td>41027</td>\n",
-       "      <td>28685</td>\n",
-       "      <td>2033</td>\n",
-       "      <td>10309</td>\n",
-       "      <td>11/07/2020 20:18:07</td>\n",
+       "      <td>41906</td>\n",
+       "      <td>29198</td>\n",
+       "      <td>2046</td>\n",
+       "      <td>10662</td>\n",
+       "      <td>12/07/2020 19:41:34</td>\n",
        "      <td>0</td>\n",
        "      <td>GJ</td>\n",
        "      <td>0</td>\n",
@@ -572,16 +572,16 @@
       ],
       "text/plain": [
        "         State  Confirmed  Recovered  Deaths  Active    Last_Updated_Time  \\\n",
-       "0        Total     851261     536544   22699  291636  12/07/2020 14:24:06   \n",
-       "1  Maharashtra     246600     136985   10116   99202  12/07/2020 01:51:08   \n",
-       "2   Tamil Nadu     134226      85915    1898   46413  11/07/2020 19:07:07   \n",
-       "3        Delhi     110921      87692    3334   19895  11/07/2020 19:50:08   \n",
-       "4      Gujarat      41027      28685    2033   10309  11/07/2020 20:18:07   \n",
+       "0        Total     888944     560307   23333  304922  13/07/2020 18:36:06   \n",
+       "1  Maharashtra     254427     140325   10289  103516  12/07/2020 19:07:08   \n",
+       "2   Tamil Nadu     142798      92567    2032   48199  13/07/2020 18:28:09   \n",
+       "3        Delhi     112494      89968    3371   19155  12/07/2020 18:22:07   \n",
+       "4      Gujarat      41906      29198    2046   10662  12/07/2020 19:41:34   \n",
        "\n",
        "   Migrated_Other State_code  Delta_Confirmed  Delta_Recovered  Delta_Deaths  \\\n",
-       "0             382         TT              902              313            12   \n",
+       "0             382         TT             9477             5878           146   \n",
        "1             297         MH                0                0             0   \n",
-       "2               0         TN                0                0             0   \n",
+       "2               0         TN             4328             3035            66   \n",
        "3               0         DL                0                0             0   \n",
        "4               0         GJ                0                0             0   \n",
        "\n",
@@ -589,7 +589,7 @@
        "0                                                NaN  \n",
        "1  297 cases were marked as non-covid deaths in M...  \n",
        "2  2 deaths cross notified to other states from C...  \n",
-       "3  Delhi bulletins in the morning, containing dat...  \n",
+       "3  Delhi bulletins contain the counts for the pre...  \n",
        "4                                                NaN  "
       ]
      },
@@ -822,13 +822,13 @@
        "      <td>State Unassigned</td>\n",
        "      <td>UN_Unassigned</td>\n",
        "      <td>Unassigned</td>\n",
-       "      <td>2995</td>\n",
-       "      <td>2995</td>\n",
+       "      <td>2329</td>\n",
+       "      <td>2329</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>-392</td>\n",
-       "      <td>-392</td>\n",
+       "      <td>-666</td>\n",
+       "      <td>-666</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -898,13 +898,13 @@
        "      <td>Andhra Pradesh</td>\n",
        "      <td>AP_Foreign Evacuees</td>\n",
        "      <td>Foreign Evacuees</td>\n",
-       "      <td>428</td>\n",
-       "      <td>129</td>\n",
-       "      <td>299</td>\n",
+       "      <td>432</td>\n",
+       "      <td>109</td>\n",
+       "      <td>323</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -923,25 +923,25 @@
        "4     0         AP               Andhra Pradesh          AP_Foreign Evacuees   \n",
        "\n",
        "                   District  Confirmed  Active  Recovered  Deceased  \\\n",
-       "0                Unassigned       2995    2995          0         0   \n",
+       "0                Unassigned       2329    2329          0         0   \n",
        "1                  Nicobars          0       0          0         0   \n",
        "2  North and Middle Andaman          1       0          1         0   \n",
        "3             South Andaman         51      19         32         0   \n",
-       "4          Foreign Evacuees        428     129        299         0   \n",
+       "4          Foreign Evacuees        432     109        323         0   \n",
        "\n",
        "   Migrated_Other  Delta_Confirmed  Delta_Active  Delta_Recovered  \\\n",
-       "0               0             -392          -392                0   \n",
+       "0               0             -666          -666                0   \n",
        "1               0                0             0                0   \n",
        "2               0                0             0                0   \n",
        "3               0                0             0                0   \n",
-       "4               0                0             0                0   \n",
+       "4               0                3             3                0   \n",
        "\n",
-       "   Delta_Deceased District_Notes  Last_Updated  \n",
-       "0               0            NaN           NaN  \n",
-       "1               0            NaN           NaN  \n",
-       "2               0            NaN           NaN  \n",
-       "3               0            NaN           NaN  \n",
-       "4               0            NaN           NaN  "
+       "   Delta_Deceased District_Notes Last_Updated  \n",
+       "0               0            NaN          NaN  \n",
+       "1               0            NaN          NaN  \n",
+       "2               0            NaN          NaN  \n",
+       "3               0            NaN          NaN  \n",
+       "4               0            NaN          NaN  "
       ]
      },
      "execution_count": 6,
@@ -1230,7 +1230,7 @@
        "      <td>1403.0</td>\n",
        "      <td>Samples Sent</td>\n",
        "      <td>12.0</td>\n",
-       "      <td>1210+</td>\n",
+       "      <td>1210</td>\n",
        "      <td>181.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1307,7 +1307,7 @@
        "2  27/04/2020  Andaman and Nicobar Islands        2848.0       Samples Sent   \n",
        "\n",
        "   Positive Negative  Unconfirmed  Cumulative People In Quarantine  \\\n",
-       "0      12.0    1210+        181.0                              NaN   \n",
+       "0      12.0     1210        181.0                              NaN   \n",
        "1      27.0      NaN        246.0                              NaN   \n",
        "2      33.0      NaN        106.0                              NaN   \n",
        "\n",
