--- a/api.ipynb
+++ b/api.ipynb
@@ -85,6 +85,7 @@
        "      <th>Detected State</th>\n",
        "      <th>State code</th>\n",
        "      <th>...</th>\n",
+       "      <th>Contracted from which Patient (Suspected)</th>\n",
        "      <th>Nationality</th>\n",
        "      <th>Type of transmission</th>\n",
        "      <th>Status Change Date</th>\n",
@@ -92,9 +93,8 @@
        "      <th>Source_2</th>\n",
        "      <th>Source_3</th>\n",
        "      <th>Backup Notes</th>\n",
-       "      <th>Num cases</th>\n",
-       "      <th>Entry_ID</th>\n",
        "      <th>Num Cases</th>\n",
+       "      <th>Entry_ID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -111,6 +111,7 @@
        "      <td>Kerala</td>\n",
        "      <td>KL</td>\n",
        "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>India</td>\n",
        "      <td>Imported</td>\n",
        "      <td>14/02/2020</td>\n",
@@ -119,7 +120,6 @@
        "      <td>NaN</td>\n",
        "      <td>Student from Wuhan</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -135,6 +135,7 @@
        "      <td>Kerala</td>\n",
        "      <td>KL</td>\n",
        "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>India</td>\n",
        "      <td>Imported</td>\n",
        "      <td>14/02/2020</td>\n",
@@ -143,7 +144,6 @@
        "      <td>NaN</td>\n",
        "      <td>Student from Wuhan</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -159,6 +159,7 @@
        "      <td>Kerala</td>\n",
        "      <td>KL</td>\n",
        "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>India</td>\n",
        "      <td>Imported</td>\n",
        "      <td>14/02/2020</td>\n",
@@ -167,7 +168,6 @@
        "      <td>https://weather.com/en-IN/india/news/news/2020...</td>\n",
        "      <td>Student from Wuhan</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -183,6 +183,7 @@
        "      <td>Delhi</td>\n",
        "      <td>DL</td>\n",
        "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>India</td>\n",
        "      <td>Imported</td>\n",
        "      <td>15/03/2020</td>\n",
@@ -191,7 +192,6 @@
        "      <td>NaN</td>\n",
        "      <td>Travel history to Italy and Austria</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -207,6 +207,7 @@
        "      <td>Telangana</td>\n",
        "      <td>TG</td>\n",
        "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>India</td>\n",
        "      <td>Imported</td>\n",
        "      <td>02/03/2020</td>\n",
@@ -216,11 +217,10 @@
        "      <td>Travel history to Dubai, Singapore contact</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
+       "<p>5 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -238,19 +238,26 @@
        "3          45      M  East Delhi (Mayur Vihar)        East Delhi   \n",
        "4          24      M                 Hyderabad         Hyderabad   \n",
        "\n",
-       "  Detected State State code  ... Nationality Type of transmission  \\\n",
-       "0         Kerala         KL  ...       India             Imported   \n",
-       "1         Kerala         KL  ...       India             Imported   \n",
-       "2         Kerala         KL  ...       India             Imported   \n",
-       "3          Delhi         DL  ...       India             Imported   \n",
-       "4      Telangana         TG  ...       India             Imported   \n",
+       "  Detected State State code  ... Contracted from which Patient (Suspected)  \\\n",
+       "0         Kerala         KL  ...                                       NaN   \n",
+       "1         Kerala         KL  ...                                       NaN   \n",
+       "2         Kerala         KL  ...                                       NaN   \n",
+       "3          Delhi         DL  ...                                       NaN   \n",
+       "4      Telangana         TG  ...                                       NaN   \n",
        "\n",
-       "  Status Change Date                                           Source_1  \\\n",
-       "0         14/02/2020  https://twitter.com/vijayanpinarayi/status/122...   \n",
-       "1         14/02/2020  https://www.indiatoday.in/india/story/kerala-r...   \n",
-       "2         14/02/2020  https://www.indiatoday.in/india/story/kerala-n...   \n",
-       "3         15/03/2020  https://www.indiatoday.in/india/story/not-a-ja...   \n",
-       "4         02/03/2020  https://www.deccanherald.com/national/south/qu...   \n",
+       "  Nationality Type of transmission Status Change Date  \\\n",
+       "0       India             Imported         14/02/2020   \n",
+       "1       India             Imported         14/02/2020   \n",
+       "2       India             Imported         14/02/2020   \n",
+       "3       India             Imported         15/03/2020   \n",
+       "4       India             Imported         02/03/2020   \n",
+       "\n",
+       "                                            Source_1  \\\n",
+       "0  https://twitter.com/vijayanpinarayi/status/122...   \n",
+       "1  https://www.indiatoday.in/india/story/kerala-r...   \n",
+       "2  https://www.indiatoday.in/india/story/kerala-n...   \n",
+       "3  https://www.indiatoday.in/india/story/not-a-ja...   \n",
+       "4  https://www.deccanherald.com/national/south/qu...   \n",
        "\n",
        "                                            Source_2  \\\n",
        "0  https://weather.com/en-IN/india/news/news/2020...   \n",
@@ -266,14 +273,14 @@
        "3                                                NaN   \n",
        "4  https://www.thehindu.com/news/national/coronav...   \n",
        "\n",
-       "                                 Backup Notes Num cases Entry_ID Num Cases  \n",
-       "0                          Student from Wuhan       1.0      NaN       NaN  \n",
-       "1                          Student from Wuhan       1.0      NaN       NaN  \n",
-       "2                          Student from Wuhan       1.0      NaN       NaN  \n",
-       "3         Travel history to Italy and Austria       1.0      NaN       NaN  \n",
-       "4  Travel history to Dubai, Singapore contact       1.0      NaN       NaN  \n",
+       "                                 Backup Notes Num Cases Entry_ID  \n",
+       "0                          Student from Wuhan       1.0      NaN  \n",
+       "1                          Student from Wuhan       1.0      NaN  \n",
+       "2                          Student from Wuhan       1.0      NaN  \n",
+       "3         Travel history to Italy and Austria       1.0      NaN  \n",
+       "4  Travel history to Dubai, Singapore contact       1.0      NaN  \n",
        "\n",
-       "[5 rows x 23 columns]"
+       "[5 rows x 22 columns]"
       ]
      },
      "execution_count": 2,
@@ -494,41 +501,41 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Total</td>\n",
-       "      <td>907499</td>\n",
-       "      <td>572112</td>\n",
-       "      <td>23727</td>\n",
-       "      <td>311276</td>\n",
-       "      <td>14/07/2020 10:24:11</td>\n",
-       "      <td>384</td>\n",
+       "      <td>937844</td>\n",
+       "      <td>593178</td>\n",
+       "      <td>24327</td>\n",
+       "      <td>319950</td>\n",
+       "      <td>15/07/2020 11:27:58</td>\n",
+       "      <td>389</td>\n",
        "      <td>TT</td>\n",
-       "      <td>-146</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>282</td>\n",
+       "      <td>90</td>\n",
+       "      <td>12</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Maharashtra</td>\n",
-       "      <td>260924</td>\n",
-       "      <td>144507</td>\n",
-       "      <td>10482</td>\n",
-       "      <td>105638</td>\n",
-       "      <td>13/07/2020 19:41:41</td>\n",
-       "      <td>297</td>\n",
+       "      <td>267665</td>\n",
+       "      <td>149007</td>\n",
+       "      <td>10695</td>\n",
+       "      <td>107665</td>\n",
+       "      <td>14/07/2020 20:12:00</td>\n",
+       "      <td>298</td>\n",
        "      <td>MH</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>297 cases were marked as non-covid deaths in M...</td>\n",
+       "      <td>298 cases were marked as non-covid deaths in M...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Tamil Nadu</td>\n",
-       "      <td>142798</td>\n",
-       "      <td>92567</td>\n",
-       "      <td>2032</td>\n",
-       "      <td>48199</td>\n",
-       "      <td>13/07/2020 18:28:09</td>\n",
+       "      <td>147324</td>\n",
+       "      <td>97310</td>\n",
+       "      <td>2099</td>\n",
+       "      <td>47915</td>\n",
+       "      <td>14/07/2020 20:12:02</td>\n",
        "      <td>0</td>\n",
        "      <td>TN</td>\n",
        "      <td>0</td>\n",
@@ -539,26 +546,26 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Delhi</td>\n",
-       "      <td>113740</td>\n",
-       "      <td>91312</td>\n",
-       "      <td>3411</td>\n",
-       "      <td>19017</td>\n",
-       "      <td>13/07/2020 21:07:08</td>\n",
+       "      <td>115346</td>\n",
+       "      <td>93236</td>\n",
+       "      <td>3446</td>\n",
+       "      <td>18664</td>\n",
+       "      <td>14/07/2020 20:12:04</td>\n",
        "      <td>0</td>\n",
        "      <td>DL</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Delhi bulletins contain the counts for the pre...</td>\n",
+       "      <td>[July 14]: Value for the total tests conducted...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Gujarat</td>\n",
-       "      <td>42808</td>\n",
-       "      <td>29806</td>\n",
-       "      <td>2056</td>\n",
-       "      <td>10946</td>\n",
-       "      <td>13/07/2020 19:54:11</td>\n",
+       "      <td>43723</td>\n",
+       "      <td>30555</td>\n",
+       "      <td>2070</td>\n",
+       "      <td>11098</td>\n",
+       "      <td>14/07/2020 20:26:59</td>\n",
        "      <td>0</td>\n",
        "      <td>GJ</td>\n",
        "      <td>0</td>\n",
@@ -572,24 +579,24 @@
       ],
       "text/plain": [
        "         State  Confirmed  Recovered  Deaths  Active    Last_Updated_Time  \\\n",
-       "0        Total     907499     572112   23727  311276  14/07/2020 10:24:11   \n",
-       "1  Maharashtra     260924     144507   10482  105638  13/07/2020 19:41:41   \n",
-       "2   Tamil Nadu     142798      92567    2032   48199  13/07/2020 18:28:09   \n",
-       "3        Delhi     113740      91312    3411   19017  13/07/2020 21:07:08   \n",
-       "4      Gujarat      42808      29806    2056   10946  13/07/2020 19:54:11   \n",
+       "0        Total     937844     593178   24327  319950  15/07/2020 11:27:58   \n",
+       "1  Maharashtra     267665     149007   10695  107665  14/07/2020 20:12:00   \n",
+       "2   Tamil Nadu     147324      97310    2099   47915  14/07/2020 20:12:02   \n",
+       "3        Delhi     115346      93236    3446   18664  14/07/2020 20:12:04   \n",
+       "4      Gujarat      43723      30555    2070   11098  14/07/2020 20:26:59   \n",
        "\n",
        "   Migrated_Other State_code  Delta_Confirmed  Delta_Recovered  Delta_Deaths  \\\n",
-       "0             384         TT             -146                0             0   \n",
-       "1             297         MH                0                0             0   \n",
+       "0             389         TT              282               90            12   \n",
+       "1             298         MH                0                0             0   \n",
        "2               0         TN                0                0             0   \n",
        "3               0         DL                0                0             0   \n",
        "4               0         GJ                0                0             0   \n",
        "\n",
        "                                         State_Notes  \n",
        "0                                                NaN  \n",
-       "1  297 cases were marked as non-covid deaths in M...  \n",
+       "1  298 cases were marked as non-covid deaths in M...  \n",
        "2  2 deaths cross notified to other states from C...  \n",
-       "3  Delhi bulletins contain the counts for the pre...  \n",
+       "3  [July 14]: Value for the total tests conducted...  \n",
        "4                                                NaN  "
       ]
      },
@@ -822,13 +829,13 @@
        "      <td>State Unassigned</td>\n",
        "      <td>UN_Unassigned</td>\n",
        "      <td>Unassigned</td>\n",
-       "      <td>2329</td>\n",
-       "      <td>2329</td>\n",
+       "      <td>1674</td>\n",
+       "      <td>1674</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-655</td>\n",
+       "      <td>-655</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -899,8 +906,8 @@
        "      <td>AP_Foreign Evacuees</td>\n",
        "      <td>Foreign Evacuees</td>\n",
        "      <td>432</td>\n",
-       "      <td>109</td>\n",
-       "      <td>323</td>\n",
+       "      <td>106</td>\n",
+       "      <td>326</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -923,14 +930,14 @@
        "4     0         AP               Andhra Pradesh          AP_Foreign Evacuees   \n",
        "\n",
        "                   District  Confirmed  Active  Recovered  Deceased  \\\n",
-       "0                Unassigned       2329    2329          0         0   \n",
+       "0                Unassigned       1674    1674          0         0   \n",
        "1                  Nicobars          0       0          0         0   \n",
        "2  North and Middle Andaman          1       0          1         0   \n",
        "3             South Andaman         51      19         32         0   \n",
-       "4          Foreign Evacuees        432     109        323         0   \n",
+       "4          Foreign Evacuees        432     106        326         0   \n",
        "\n",
        "   Migrated_Other  Delta_Confirmed  Delta_Active  Delta_Recovered  \\\n",
-       "0               0                0             0                0   \n",
+       "0               0             -655          -655                0   \n",
        "1               0                0             0                0   \n",
        "2               0                0             0                0   \n",
        "3               0                0             0                0   \n",
