--- a/api.ipynb
+++ b/api.ipynb
@@ -501,41 +501,41 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Total</td>\n",
-       "      <td>1005637</td>\n",
-       "      <td>636602</td>\n",
-       "      <td>25609</td>\n",
-       "      <td>343036</td>\n",
-       "      <td>17/07/2020 00:16:58</td>\n",
-       "      <td>390</td>\n",
+       "      <td>1078757</td>\n",
+       "      <td>677856</td>\n",
+       "      <td>26838</td>\n",
+       "      <td>373663</td>\n",
+       "      <td>19/07/2020 11:50:59</td>\n",
+       "      <td>400</td>\n",
        "      <td>TT</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>893</td>\n",
+       "      <td>226</td>\n",
+       "      <td>10</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Maharashtra</td>\n",
-       "      <td>284281</td>\n",
-       "      <td>158140</td>\n",
-       "      <td>11194</td>\n",
-       "      <td>114648</td>\n",
-       "      <td>16/07/2020 20:16:59</td>\n",
-       "      <td>299</td>\n",
+       "      <td>300937</td>\n",
+       "      <td>165663</td>\n",
+       "      <td>11596</td>\n",
+       "      <td>123377</td>\n",
+       "      <td>19/07/2020 10:36:01</td>\n",
+       "      <td>301</td>\n",
        "      <td>MH</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>299 cases were marked as non-covid deaths in M...</td>\n",
+       "      <td>301 cases are marked as non-covid deaths in MH...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Tamil Nadu</td>\n",
-       "      <td>156369</td>\n",
-       "      <td>107416</td>\n",
-       "      <td>2236</td>\n",
-       "      <td>46717</td>\n",
-       "      <td>16/07/2020 20:45:00</td>\n",
+       "      <td>165714</td>\n",
+       "      <td>113856</td>\n",
+       "      <td>2403</td>\n",
+       "      <td>49455</td>\n",
+       "      <td>19/07/2020 10:36:02</td>\n",
        "      <td>0</td>\n",
        "      <td>TN</td>\n",
        "      <td>0</td>\n",
@@ -546,11 +546,11 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Delhi</td>\n",
-       "      <td>118645</td>\n",
-       "      <td>97693</td>\n",
-       "      <td>3545</td>\n",
-       "      <td>17407</td>\n",
-       "      <td>16/07/2020 19:17:00</td>\n",
+       "      <td>121582</td>\n",
+       "      <td>101274</td>\n",
+       "      <td>3597</td>\n",
+       "      <td>16711</td>\n",
+       "      <td>19/07/2020 10:36:04</td>\n",
        "      <td>0</td>\n",
        "      <td>DL</td>\n",
        "      <td>0</td>\n",
@@ -561,11 +561,11 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Gujarat</td>\n",
-       "      <td>45567</td>\n",
-       "      <td>32174</td>\n",
-       "      <td>2090</td>\n",
-       "      <td>11303</td>\n",
-       "      <td>16/07/2020 20:17:01</td>\n",
+       "      <td>47476</td>\n",
+       "      <td>34005</td>\n",
+       "      <td>2126</td>\n",
+       "      <td>11345</td>\n",
+       "      <td>19/07/2020 10:36:05</td>\n",
        "      <td>0</td>\n",
        "      <td>GJ</td>\n",
        "      <td>0</td>\n",
@@ -579,22 +579,22 @@
       ],
       "text/plain": [
        "         State  Confirmed  Recovered  Deaths  Active    Last_Updated_Time  \\\n",
-       "0        Total    1005637     636602   25609  343036  17/07/2020 00:16:58   \n",
-       "1  Maharashtra     284281     158140   11194  114648  16/07/2020 20:16:59   \n",
-       "2   Tamil Nadu     156369     107416    2236   46717  16/07/2020 20:45:00   \n",
-       "3        Delhi     118645      97693    3545   17407  16/07/2020 19:17:00   \n",
-       "4      Gujarat      45567      32174    2090   11303  16/07/2020 20:17:01   \n",
+       "0        Total    1078757     677856   26838  373663  19/07/2020 11:50:59   \n",
+       "1  Maharashtra     300937     165663   11596  123377  19/07/2020 10:36:01   \n",
+       "2   Tamil Nadu     165714     113856    2403   49455  19/07/2020 10:36:02   \n",
+       "3        Delhi     121582     101274    3597   16711  19/07/2020 10:36:04   \n",
+       "4      Gujarat      47476      34005    2126   11345  19/07/2020 10:36:05   \n",
        "\n",
        "   Migrated_Other State_code  Delta_Confirmed  Delta_Recovered  Delta_Deaths  \\\n",
-       "0             390         TT                0                0             0   \n",
-       "1             299         MH                0                0             0   \n",
+       "0             400         TT              893              226            10   \n",
+       "1             301         MH                0                0             0   \n",
        "2               0         TN                0                0             0   \n",
        "3               0         DL                0                0             0   \n",
        "4               0         GJ                0                0             0   \n",
        "\n",
        "                                         State_Notes  \n",
        "0                                                NaN  \n",
-       "1  299 cases were marked as non-covid deaths in M...  \n",
+       "1  301 cases are marked as non-covid deaths in MH...  \n",
        "2  2 deaths cross notified to other states from C...  \n",
        "3  [July 14]: Value for the total tests conducted...  \n",
        "4                                                NaN  "
@@ -829,13 +829,13 @@
        "      <td>State Unassigned</td>\n",
        "      <td>UN_Unassigned</td>\n",
        "      <td>Unassigned</td>\n",
-       "      <td>1435</td>\n",
-       "      <td>1435</td>\n",
+       "      <td>150</td>\n",
+       "      <td>150</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-163</td>\n",
+       "      <td>-163</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -905,9 +905,9 @@
        "      <td>Andhra Pradesh</td>\n",
        "      <td>AP_Foreign Evacuees</td>\n",
        "      <td>Foreign Evacuees</td>\n",
-       "      <td>432</td>\n",
-       "      <td>60</td>\n",
-       "      <td>372</td>\n",
+       "      <td>434</td>\n",
+       "      <td>44</td>\n",
+       "      <td>390</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -930,14 +930,14 @@
        "4     0         AP               Andhra Pradesh          AP_Foreign Evacuees   \n",
        "\n",
        "                   District  Confirmed  Active  Recovered  Deceased  \\\n",
-       "0                Unassigned       1435    1435          0         0   \n",
+       "0                Unassigned        150     150          0         0   \n",
        "1                  Nicobars          0       0          0         0   \n",
        "2  North and Middle Andaman          1       0          1         0   \n",
        "3             South Andaman         51      19         32         0   \n",
-       "4          Foreign Evacuees        432      60        372         0   \n",
+       "4          Foreign Evacuees        434      44        390         0   \n",
        "\n",
        "   Migrated_Other  Delta_Confirmed  Delta_Active  Delta_Recovered  \\\n",
-       "0               0                0             0                0   \n",
+       "0               0             -163          -163                0   \n",
        "1               0                0             0                0   \n",
        "2               0                0             0                0   \n",
        "3               0                0             0                0   \n",
@@ -1251,7 +1251,7 @@
        "      <td>0.86%</td>\n",
        "      <td>3.53</td>\n",
        "      <td>3534.0</td>\n",
-       "      <td>117.0</td>\n",
+       "      <td>117</td>\n",
        "      <td>397000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1275,7 +1275,7 @@
        "      <td>1.01%</td>\n",
        "      <td>6.75</td>\n",
        "      <td>6748.0</td>\n",
-       "      <td>99.0</td>\n",
+       "      <td>99</td>\n",
        "      <td>397000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1299,7 +1299,7 @@
        "      <td>1.16%</td>\n",
        "      <td>7.17</td>\n",
        "      <td>7174.0</td>\n",
-       "      <td>86.0</td>\n",
+       "      <td>86</td>\n",
        "      <td>397000.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1339,9 +1339,9 @@
        "2                 1.16%                7.17             7174.0   \n",
        "\n",
        "   Tests per positive case  Population NCP 2019 Projection  \n",
-       "0                    117.0                        397000.0  \n",
-       "1                     99.0                        397000.0  \n",
-       "2                     86.0                        397000.0  \n",
+       "0                      117                        397000.0  \n",
+       "1                       99                        397000.0  \n",
+       "2                       86                        397000.0  \n",
        "\n",
        "[3 rows x 28 columns]"
       ]
